--- a/hesapmakinesi.html
+++ b/hesapmakinesi.html
@@ -39,7 +39,7 @@
     <a href="javascript:void(0)" class="dropbtn">DIGER ODEVLER</a>
     <div class="dropdown-content">
       <a href="hesapmakinesi.html">HESAP MAKINESI</a>
-      <a href="form.html">FORM FALAN FILAN</a>
+      <a href="#">FORM</a>
     </div>
     </ul>
     
