--- a/html.html
+++ b/html.html
@@ -35,8 +35,8 @@
     <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">DIGER ODEVLER</a>
     <div class="dropdown-content">
-      <a href="cssnedir.html">HESAP MAKINESI</a>
-      <a href="csstemelleri.html">FORM FALAN FILAN</a>
+      <a href="hesapmakinesi.html">HESAP MAKINESI</a>
+      <a href="#">FORM</a>
     </div>
     </ul>
   
